463
It is actually already {{println(): Unit}} (at least in trunk).  In any event, whether or not the parens are given does not affect how it may be called.

In any event, with 2.7.0 final the interpreter does not accept the subject line:
{code}
Welcome to Scala version 2.7.0-final (Java HotSpot(TM) Client VM, Java 1.5.0_14).
Type in expressions to have them evaluated.
Type :help for more information.

scala> println "Hello, world"
error: That kind of statement combination is not supported by the interpreter.

scala>
{code}
and
{code}
% echo 'println "Hello, world"' > hello.scala
% scala hello.scala
(fragment of hello.scala):1: error: ';' expected but string literal found.
println "Hello, world"
         ^
one error found
!!!
discarding <script preamble>
{code}
